--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+h1 {
+  text-align: center;
+  margin: 10px 0;
+  font-family: sans-serif;
+  font-weight: bold;
+}
 form {
   display: flex;
   flex-direction: column;
@@ -14,6 +20,11 @@ input {
   width: 200px;
   height: 40px;
   padding-left: 5px;
+  font-size: 18px;
+  color: white;
+  border: 1px solid black;
+}
+textarea {
   font-size: 18px;
 }
 button {
